--- a/config.example.yaml
+++ b/config.example.yaml
@@ -97,6 +97,7 @@ features:
     - The `<args>` must contain all required arguments for that tool.
     - Do not add any text or explanation after the closing `</function_calls>` tag.
     - When a tool call is necessary, you MUST output the entire and complete structure as defined above. Do not omit any part of it.
+    - 'invoke' and 'parameter' are not the correct tool call tags; please use 'tool' and 'args' tags instead
     - Try to perform multiple tool calls step-by-step: prefer issuing smaller, sequential tool calls rather than one very long call with many tools. 
     
     Next, please follow the instructions below and ensure you have memorized the tool-calling rules.
